@@ -1,5 +1,9 @@
 2009-04-30  Thomas Heller  <theller@python.net>
 
+	* Replace the VARIANTEnumerator implementation class in
+	comtypes.server.automation with a new one which should actually be
+	usable.
+
 	* A completely new way how localserver and inproc server instances
 	are managed.
 
